# prism

./: CMakeLists.txt  README.md  Задача_решение.docx  Задача_решение.odt
src/: CMakeLists.txt  main.cpp  math_funcs.cpp  math_funcs.h  polygon.cpp  polygon.h  polygon3d.cpp  polygon3d.h  prism.cpp  prism.h  triangle.cpp  triangle.h
tests/: CMakeLists.txt  test.cpp
